[gd_scene load_steps=20 format=3 uid="uid://dyhl1yryjevae"]

[ext_resource type="Texture2D" uid="uid://bxlpw5acg6o2y" path="res://scenes/game_object/player/player.png" id="1_4005k"]
[ext_resource type="Script" path="res://scenes/game_object/player/player.gd" id="1_uuq2g"]
[ext_resource type="PackedScene" uid="uid://ps54t8egnhku" path="res://scenes/component/health_component.tscn" id="2_4uu38"]
[ext_resource type="PackedScene" uid="uid://d0afcnwl7r57r" path="res://scenes/component/velocity_component.tscn" id="2_i7djo"]
[ext_resource type="PackedScene" uid="uid://cunpinhoy6gxu" path="res://scenes/component/level_up_component.tscn" id="4_l6vfd"]
[ext_resource type="PackedScene" uid="uid://cdnwfp1mrfh82" path="res://scenes/component/healing_component.tscn" id="5_q7fay"]
[ext_resource type="PackedScene" uid="uid://qaphbroxkpd2" path="res://scenes/component/random_stream_player_2d_component.tscn" id="5_v50t5"]
[ext_resource type="AudioStream" uid="uid://d13g60bmcthgm" path="res://assets/audio/impactMining_000.ogg" id="6_h216y"]
[ext_resource type="PackedScene" uid="uid://nbbvoopmg1mx" path="res://scenes/ability/stab_ability_controller/stab_ability_controller.tscn" id="6_ixnfa"]
[ext_resource type="AudioStream" uid="uid://deejburb617g4" path="res://assets/audio/impactMining_001.ogg" id="7_hofjr"]
[ext_resource type="AudioStream" uid="uid://dsr4ft1xcggje" path="res://assets/audio/impactMining_002.ogg" id="8_hbxhf"]
[ext_resource type="AudioStream" uid="uid://b5ojt14jwawq7" path="res://assets/audio/impactMining_003.ogg" id="9_shbym"]
[ext_resource type="AudioStream" uid="uid://b8f5io6h2funf" path="res://assets/audio/impactMining_004.ogg" id="10_uhbtb"]

[sub_resource type="Animation" id="Animation_jfmwx"]
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_uhp5i"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -3), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.174533, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4),
"transitions": PackedFloat32Array(0.784584, 2.54912, 1.03526, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 1.05), Vector2(1.25, 0.85), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_00uiv"]
_data = {
"RESET": SubResource("Animation_jfmwx"),
"walk": SubResource("Animation_uhp5i")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_3x8ff"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_sosvj"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_r3kwq"]
radius = 5.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_uuq2g")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_00uiv")
}

[node name="VelocityComponent" parent="." instance=ExtResource("2_i7djo")]
max_speed = 90
acceleration = 25.0
is_player = true

[node name="HealthComponent" parent="." instance=ExtResource("2_4uu38")]

[node name="LevelUpComponent" parent="." instance=ExtResource("4_l6vfd")]

[node name="Abilities" type="Node" parent="."]

[node name="StabAbilityController" parent="Abilities" instance=ExtResource("6_ixnfa")]

[node name="HitRandomStreamPlayer" parent="." instance=ExtResource("5_v50t5")]
streams = Array[AudioStream]([ExtResource("6_h216y"), ExtResource("7_hofjr"), ExtResource("8_hbxhf"), ExtResource("9_shbym"), ExtResource("10_uhbtb")])

[node name="DamageIntervalTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(32, 8)
offset_left = -16.0
offset_top = -25.0
offset_right = 16.0
offset_bottom = -17.0
pivot_offset = Vector2(16, 4)
max_value = 1.0
value = 0.5
show_percentage = false

[node name="PickupArea2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_3x8ff")

[node name="InteractionArea2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea2D"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_3x8ff")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("1_4005k")
offset = Vector2(0, -8)

[node name="HealingComponent" parent="." instance=ExtResource("5_q7fay")]

[node name="CollisionArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea2D"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_sosvj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_r3kwq")
